# RSS_surface_emissivity

./: .gitignore  LICENSE  README.md  meson.build  pyproject.toml
src/geomod10/: geomod10b.f90  geomod10c.f90  geomod10py.f90
tests/: simple_test_geomod10.py  test_geomod10.py
